--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "google-spreadsheet-notifier",
   "version": "1.0.0",
   "description": "Displays OS notifications with content from Google Spreadsheets.",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "standard && mocha --recursive --reporter spec",
     "test-watch": "standard && mocha --watch --recursive --reporter spec",
